# grima

./: ++psvn.state  .extras  COPYING  Makefile.am  README  README.md  bootstrap.sh  build-local.sh  build-setup.sh  build.sh  clean-local.sh  clean.sh  configure.in  distclean.list  distclean.sh  extras  files  post-build.sh  run-configure.sh  setup.py.in  test-local.sh  test.sh
etc/: common  grima-couchdb.ui  grima-db-create.sql  grima-db-delete.sql  grima-db-dump.sql  grima-example-app.ui  grima-example-widget.ui  grima-plot.ui  grima-plot2.ui  grima-subplot-app.ui  grima-subplot-widget.ini.in  grima-subplot-widget.ui  lighttpd.conf  plot.glade  pylintrc
etc/widget-catalog.d/: GrimaWidgets.py  widget-catalog.xml
share/: Makefile.include
src/: Makefile.am
src/include/: Makefile.am  grima_common.h
src/python/grima/: __init__.py  couchdb.py  plot.py  plot2.py  test.py  ui.py  widgets.py
src/python/grima/backends/: __init__.py
src/python/grima/plot/: plot.py  test.py
src/python/grima/www/: manage.py  settings.py  urls.py
src/python/kryten/: __init__.py  plot.py  test.py
src/python/kryten/plot/: plot.py
src/ref/: Makefile.am
src/tests/: Makefile.am
var/data/: grima-plot-test-data.1  grima-plot-test-data.2  grima-plot-test-data.3
var/db/: grima-django-db.json
var/www/: grima.wsgi
var/www/site/: dir-generator.php  index.html  site.css
